fix z-index

--- a/resources/scss/_main.scss
+++ b/resources/scss/_main.scss
@@ -827,7 +827,7 @@ body.landing.degree-list header {
     &::before {
       content: "";
       height: 0;
-      z-index: 1000000;
+      z-index: 90;
       position: absolute;
       left: 0;
       right: 0;
@@ -866,7 +866,7 @@ body.landing.degree-list header {
   left: 0;
   right: 0;
   width: 100%;
-  z-index: 4000;
+  z-index: 80;
   position: absolute;
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
